# rust-vision-buddy

./: .fullstack-services.json  .gitignore  README.md  install_nlp_service.ps1  package.json  run_fullstack_local.ps1  stop_fullstack_local.ps1  test_oauth_api_callbacks.py  tsconfig.app.json
backend/: Cargo.toml  tarpaulin-report.html
backend/.cargo/: config.toml
backend/.sqlx/: query-018a0a79c5f63b61d936395f371ec03d5135ab472249469fa9d7cf527837351a.json  query-0cc3eebbb59e5e7f3cc485e736289c06d7e0eaaf02f13ddd705928739ad57f94.json  query-1ce90fc706c537bae3c71989a187feb56658ba5ab99f308ea33fd2b27f42611e.json  query-2cecf86e4fb8cd33bc574c4cd66d2ee9568b626885c406bdafa9eb38e36c90b2.json  query-35a9663655b3119094595db0bc23e628e60579bba88d59d71d87dfc44e4c4c49.json  query-4dfc60a54639bda8e007f30e189f280c9356bc8d3b34473f5538085bb9fb0eba.json  query-607ce6c63bf3c19cedd860eed90ffe4bd5bf52265b0f414d33b1d2cc08888e32.json  query-6b22a8eea8954ce60bbcfe4c9253ce034063ffebc2b69fec2c0f368d77fe43ac.json  query-72a56fe1aff42ad5d76e1c98394e8a1af9d5c0303ba33cd39cf0464e5e724017.json  query-7577e59ae03806ed6c2c13eb5969b1c59b5f7fa1ad6cf9afede7a21068437e31.json  query-7d5519a8733801d8aa77c4104f49552ddbe45bfc36260bb39bff3ebd93abb453.json  query-9d24080153a7d7d5c1e7c9748d3a0ad326cbce53e7f74ce6e0af4388c9673d95.json  query-aa02b8e51203f48a79f6575414f9530242cab0e9dbe7be845ddd8b4b99237393.json  query-b355931477940e929b8907a7a9a60c411944414626bb4ad32935621bfd0e4515.json  query-bb4d22a91b518ad1a8c02137e823b20d1f40458f4d0fe26a2d9975a297a15270.json  query-c62f29ce98adf4f60094a9e0cbaa1ce7c4d2e477940d4bdf87a1ff3d3088f628.json  query-fa12ec914858aa461971ac6aa1934b1a1008e1de6545af18d76675567f55ab69.json  query-fb98f3bce62cc16c79cbecf646b82e3478d2866737d13d6eff89712e64b03b36.json
backend/migrations/: 001_create_users_table.down.sql  001_create_users_table.sql  002_create_cvs_table.down.sql  002_create_cvs_table.sql
backend/src/: lib.rs  main.rs
backend/templates/: cover_letter_casual_en.tera  cover_letter_casual_vi.tera  cover_letter_concise_en.tera  cover_letter_concise_vi.tera  cover_letter_formal_en.tera  cover_letter_formal_vi.tera  cover_letter_persuasive_en.tera  cover_letter_persuasive_vi.tera  email_body_casual_en.tera  email_body_casual_vi.tera  email_body_concise_en.tera  email_body_concise_vi.tera  email_body_formal_en.tera  (+11 more)
(+291 files in other folders)
