[package]
name = "career_compass_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework và Async runtime
axum = "0.7"
axum-macros = "0.5.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization (Quan trọng để sửa lỗi Serialize/Deserialize)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client để gọi Gemini API và Python NLP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database và Định danh
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging và Error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"

# Security và Auth
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tera = "1.20"
url = "2.5"
base64 = "0.22"
urlencoding = "2.1"
headless_chrome = "1.0.21"
async-trait = "0.1.89"

[dev-dependencies]
# Công cụ hỗ trợ Testing
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
http-body-util = "0.1"
# Macros dành riêng cho việc chạy #[tokio::test]
tokio = { version = "1", features = ["full", "macros"] }
mockall = "0.13"
